tdf#116365 vcl opengl: respect max texture size when creating textures

I can't reproduce the crash, but the image in the bugdoc is a large one
(23100 x 1364 pixels) and it was black for me. It's rendered correctly
now.

(cherry picked from commit a3cbd06872b2f9ee9253e5879f590ff1b9eaf365)

Change-Id: I72c395af12ef88cf1352602492b84e1dcd04ed14